--- a/helm/charts/nui/values.yaml
+++ b/helm/charts/nui/values.yaml
@@ -6,13 +6,12 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
-
 replicaCount: 1
-
+nuiContainerSecurityContext: {}
 
 podAnnotations: {}
 podLabels: {}
-
+podSecurityContext: {}
 
 serviceAccount:
   # Specifies whether a service account should be created
