--- a/helm/charts/nui/templates/statefulset.yaml
+++ b/helm/charts/nui/templates/statefulset.yaml
@@ -21,6 +21,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      serviceAccountName: {{ include "nui-k8s.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
