--- a/helm/charts/nui/templates/statefulset.yaml
+++ b/helm/charts/nui/templates/statefulset.yaml
@@ -22,6 +22,7 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ include "nui-k8s.serviceAccountName" . }}
+      automountServiceAccountToken: false
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
