--- a/helm/charts/nui/values.yaml
+++ b/helm/charts/nui/values.yaml
@@ -6,6 +6,7 @@ image:
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+  imagePullSecrets: []
 replicaCount: 1
 nuiContainerSecurityContext: {}
 
