--- a/helm/charts/nui/templates/statefulset.yaml
+++ b/helm/charts/nui/templates/statefulset.yaml
@@ -32,6 +32,9 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           securityContext:
             {{- toYaml .Values.nuiContainerSecurityContext | nindent 12 }}
+          {{- if .Values.command }}
+          command: {{ toYaml .Values.command | nindent 12 }}
+          {{- end }}
           ports:
             - name: http
               containerPort: 31311
